// Copyright (c) 2020-2021 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTCreateInstrumentDefinition";
option optimize_for = LITE_RUNTIME;

import public "ContactEnums.proto";

message CreateInstrumentDefinition {
    optional uint32 version = 1;
    optional string name = 2;				// unit definition name
    optional string symbol = 3;				// unit of account symbol
    optional string primaryunitname = 4;	// name of a primary unit
    optional string fractionalunitname = 5;	// name of a fractional unit
    optional string tla = 6;				// ticker symbol for unit of account
    optional uint32 power = 7;				// relationship between primary and fractional unit
    optional string terms = 8;				// formal legal description
    optional ContactItemType unitofaccount = 9;	// see ContactEnums.proto
}
